--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="grid.html">     &#60 The Grid &#62 </a></li>
                 </ul>
             </nav>
-            <button><a class="cta" href="contact.html"></a>Contacts &#9743</a></button>
+            <button><a class="cta" href="contact.html">Contacts &#9743</a></button>
         </header>
 
         <div class="auto-type">
