--- a/contact.html
+++ b/contact.html
@@ -8,30 +8,38 @@
     <link rel="stylesheet" href="css_folder/contact.css">
     <link rel="stylesheet" href="css_folder/transition.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" 
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="icon" href="images/favicon.png">
 </head>
 <body>
 
-    <div class="section" id="birth" data-label="Birth"> Birth </div>
-    <div class="section" id="school" data-label="School"> School </div>
-    <div class="section" id="habit" data-label="Habit"> Habit </div>
-
-    <nav class="nav">
-        <div class="nav-item">
-            <a href="#birth" class="nav-link"></a>
-            <span class="nav-label"> Birth </span>
-        </div>
-        <div class="nav-item">
-            <a href="#school" class="nav-link"></a>
-            <span class="nav-label"> School </span>
-        </div>
-        <div class="nav-item">
-            <a href="#habit" class="nav-link"></a>
-            <span class="nav-label"> Habit </span>
-        </div>
-    </nav>
+    <ul>
+        <li>
+            <a href="#">
+                <i class="fab fa-github"></i>
+            </a>
+        </li>
+        <li>
+             <a href="#">
+               <i class="fab fa-discord"></i>
+             </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class="fab fa-weixin"></i>
+            </a>
+          
+        </li>
+        <li>
+            <a href="#">
+                <i class="fa-solid fa-envelope"></i>
+            </a> 
+        </li>
+    </ul>
 
     <script src="navigation.js"></script>
+    <script src="https://kit.fontawesome.com/4ea4445e2f.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
