--- a/contact.html
+++ b/contact.html
@@ -16,25 +16,32 @@
 
     <ul>
         <li>
-            <a href="#">
-                <i class="fab fa-github"></i>
-            </a>
+            <div class="yellow">
+                <a href="https://github.com/Liiiiyuxuan">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
         </li>
         <li>
-             <a href="#">
-               <i class="fab fa-discord"></i>
-             </a>
+            <div class="violet">
+                <a href="#">
+                    <i class="fab fa-discord"></i>
+                </a>
+            </div>
         </li>
         <li>
-            <a href="#">
-                <i class="fab fa-weixin"></i>
-            </a>
-          
+            <div class="green">
+                <a href="#">
+                    <i class="fab fa-weixin"></i>
+                </a>
+            </div>
         </li>
         <li>
-            <a href="#">
-                <i class="fa-solid fa-envelope"></i>
-            </a> 
+            <div class="blue">
+                <a href="#">
+                    <i class="fa-solid fa-envelope"></i>
+                </a>
+            </div> 
         </li>
     </ul>
 
