--- a/grid.html
+++ b/grid.html
@@ -11,34 +11,20 @@
 </head>
 <body>
 
-    <table class="table-auto">
-        <thead>
-          <tr>
-            <th>Song</th>
-            <th>Artist</th>
-            <th>Year</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>The Sliding Mr. Bones (Next Stop, Pottersville)</td>
-            <td>Malcolm Lockyer</td>
-            <td>1961</td>
-          </tr>
-          <tr>
-            <td>Witchy Woman</td>
-            <td>The Eagles</td>
-            <td>1972</td>
-          </tr>
-          <tr>
-            <td>Shining Star</td>
-            <td>Earth, Wind, and Fire</td>
-            <td>1975</td>
-          </tr>
-        </tbody>
-    </table>
+  <div class="grid grid-cols-3 gap-x-2 gap-y-3 grid-flow-row-dense">
+    <div class="bg-red-500    rounded-lg shadow-xl min-h-[50px]"></div>
+    <div class="bg-orange-500 rounded-lg shadow-xl min-h-[50px] col-span-3"></div>
+    <div class="bg-yellow-500 rounded-lg shadow-xl min-h-[50px]"></div>
+    <div class="bg-green-500  rounded-lg shadow-xl min-h-[50px]"></div>
+    <div class="bg-teal-500   rounded-lg shadow-xl min-h-[50px]"></div>
+    <div class="bg-blue-500   rounded-lg shadow-xl min-h-[50px] col-span-2"></div>
+    <div class="bg-indigo-500 rounded-lg shadow-xl min-h-[50px]"></div>
+    <div class="bg-purple-500 rounded-lg shadow-xl min-h-[50px]"></div>
+    <div class="bg-pink-500   rounded-lg shadow-xl min-h-[50px]"></div>
+    <div class="bg-slate-500  rounded-lg shadow-xl min-h-[50px]"></div>
+  </div>
 
-    <script src="grid.js"></script>
+  <script src="grid.js"></script>
     
 </body>
 </html>
