--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         </li>
         <li>
             <div class="violet">
-                <a href="#">
+                <a href="#" value="github" id="myInput" onclick="myFunction()">
                     <i class="fab fa-discord"></i>
                 </a>
             </div>
@@ -46,6 +46,7 @@
     </ul>
 
     <script src="navigation.js"></script>
+    <script src="contact.js"></script>
     <script src="https://kit.fontawesome.com/4ea4445e2f.js" crossorigin="anonymous"></script>
 
 </body>
