--- a/grid.html
+++ b/grid.html
@@ -12,19 +12,20 @@
 <body>
 
   <div class="grid grid-cols-3 gap-x-2 gap-y-3 grid-flow-row-dense">
-    <div class="bg-red-500    rounded-lg shadow-xl min-h-[50px] hover:bg-red-600"></div>
-    <div class="bg-orange-500 rounded-lg shadow-xl min-h-[50px] hover:bg-orange-600 col-span-3"></div>
-    <div class="bg-yellow-500 rounded-lg shadow-xl min-h-[50px] hover:bg-yellow-600"></div>
-    <div class="bg-green-500  rounded-lg shadow-xl min-h-[50px] hover:bg-green-600"></div>
-    <div class="bg-teal-500   rounded-lg shadow-xl min-h-[50px] hover:bg-teal-600"></div>
-    <div class="bg-blue-500   rounded-lg shadow-xl min-h-[50px] hover:bg-blue-600 col-span-2"></div>
-    <div class="bg-indigo-500 rounded-lg shadow-xl min-h-[50px] hover:bg-indigo-600"></div>
-    <div class="bg-purple-500 rounded-lg shadow-xl min-h-[50px] hover:bg-purple-600"></div>
-    <div class="bg-pink-500   rounded-lg shadow-xl min-h-[50px] hover:bg-pink-600"></div>
-    <div class="bg-slate-500  rounded-lg shadow-xl min-h-[50px] hover:bg-slate-600"></div>
+    <div class="cursor-pointer bg-red-500    rounded-lg shadow-xl min-h-[150px] hover:bg-red-600"></div>
+    <div class="cursor-pointer bg-orange-500 rounded-lg shadow-xl min-h-[150px] hover:bg-orange-600"></div>
+    <div class="cursor-pointer bg-yellow-500 rounded-lg shadow-xl min-h-[150px] hover:bg-yellow-600"></div>
+    <div class="cursor-pointer bg-green-500  rounded-lg shadow-xl min-h-[150px] hover:bg-green-600 col-span-3"></div>
+    <div class="cursor-pointer bg-teal-500   rounded-lg shadow-xl min-h-[150px] hover:bg-teal-600"></div>
+    <div class="cursor-pointer bg-blue-500   rounded-lg shadow-xl min-h-[150px] hover:bg-blue-600 col-span-2"></div>
+    <div class="cursor-pointer bg-indigo-500 rounded-lg shadow-xl min-h-[150px] hover:bg-indigo-600"></div>
+    <div class="cursor-pointer bg-purple-500 rounded-lg shadow-xl min-h-[150px] hover:bg-purple-600"></div>
+    <div class="cursor-pointer bg-pink-500   rounded-lg shadow-xl min-h-[150px] hover:bg-pink-600"></div>
+    <div class="cursor-pointer bg-slate-500  rounded-lg shadow-xl min-h-[150px] hover:bg-slate-600"></div>
   </div>
 
   <script src="grid.js"></script>
+  <script src="https://kit.fontawesome.com/4ea4445e2f.js" crossorigin="anonymous"></script>
     
 </body>
 </html>
