--- a/index.html
+++ b/index.html
@@ -19,14 +19,19 @@
 
             <nav>
                 <ul class="nav__links">
-                    <li><a href="#">             &#60 Services &#62 </a></li>
                     <li><a href="projects.html"> &#60 Projects &#62 </a></li>
                     <li><a href="about.html">    &#60 About    &#62 </a></li>
                     <li><a href="calendar.html"> &#60 Date     &#62 </a></li>
                     <li><a href="grid.html">     &#60 The Grid &#62 </a></li>
                 </ul>
             </nav>
-            <button><a class="cta" href="contact.html">Contacts &#9743</a></button>
+
+            <button class="ease-in-out duration-300 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" >
+                <a href="contact.html">
+                    Contacts &#9743
+                </a>
+            </button>
+            
         </header>
 
         <div class="auto-type">
