--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </ul>
             </nav>
 
-            <button class="ease-in-out duration-300 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" >
+            <button>
                 <a href="contact.html">
                     Contacts &#9743
                 </a>
